--- a/Code/Soundcloud/Base.lproj/Main.storyboard
+++ b/Code/Soundcloud/Base.lproj/Main.storyboard
@@ -137,7 +137,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_2109.PNG" translatesAutoresizingMaskIntoConstraints="NO" id="aVq-g7-txo">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="Give.png" translatesAutoresizingMaskIntoConstraints="NO" id="aVq-g7-txo">
                                 <rect key="frame" x="46" y="28" width="283" height="114"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -152,12 +152,8 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="GivingIcon.png" translatesAutoresizingMaskIntoConstraints="NO" id="3MD-CM-yHa">
-                                <rect key="frame" x="67" y="151" width="240" height="128"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Click the link below to access our secure giving portal!" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Age-o3-dhd">
-                                <rect key="frame" x="16" y="285" width="343" height="127"/>
+                                <rect key="frame" x="16" y="233" width="343" height="127"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -317,7 +313,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="IMG_2110.PNG" translatesAutoresizingMaskIntoConstraints="NO" id="1dI-DV-6PR">
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="TWS.png" translatesAutoresizingMaskIntoConstraints="NO" id="1dI-DV-6PR">
                                         <rect key="frame" x="10" y="6" width="354" height="119"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES" flexibleMaxY="YES"/>
                                     </imageView>
@@ -407,12 +403,11 @@ teaching as doctrines the commandments of men.'
         <image name="ABetterKing_Dark.png" width="2370" height="1439"/>
         <image name="C.png" width="32" height="32"/>
         <image name="ConnectSmallIcon.png" width="1920" height="584"/>
-        <image name="GivingIcon.png" width="1080" height="1080"/>
+        <image name="Give.png" width="2048" height="1024"/>
         <image name="IMG_2054.PNG" width="2048" height="1024"/>
-        <image name="IMG_2109.PNG" width="2048" height="1024"/>
-        <image name="IMG_2110.PNG" width="2048" height="1024"/>
         <image name="S.png" width="32" height="32"/>
         <image name="Sermons.png" width="1920" height="1080"/>
+        <image name="TWS.png" width="2048" height="1024"/>
         <image name="images.png" width="225" height="225"/>
         <image name="stripe.png" width="1080" height="1080"/>
     </resources>
